style.css
:root {
    /** Declaring Global Color Variables*/
    --black_900_01: #000000 --white_a700_01: #ffffff;
    --gray_500: #919191;
    /** Space Variables*/
    --space-lg: 12px;
    --space-xl: 14px;
    --space-xs: 8px;
    --space-2xl: 16px;
    --space-4xl: 20px;
    --space-6xl: 30px;
    --space-7xl: 34px;
    /** Shadow Variables */
    --shadow-lg: 0 0 13px 5px #00000029;
    /** Radius Variables */
    --radius-xs: 8px;
}

/** Setting Root Level Properties*/
*,
*::after,
*::before {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Work Sans' sans-serif;
}

img {
    max-width: 100%;
    height: auto;
}

a {
    text-decoration: none;
    display: block;
}

ul {
    margin: 0;
    padding: 0;
    margin-inline: unset !important;
    list-style: none;
}

/** Page CSS */
.group-278 {
    width: 100%;
    position: relative;
    align-content: center;

    @media only screen and (max-width: 1440px) {
        height: auto;
    }
}

.group-267 {
    background-color: var(--white_a700_01);
    width: 100%;
}

.header {
    z-index: 2;
    position: relative;
}

.header__top-row {
    background-color: var(--white_a700_01);
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: var(--space-4xl);
    padding: 6px 98px;

    @media only screen and (max-width: 1440px) {
        padding-right: 32px;
        padding-left: 32px;
    }

    /** Handling Menu UI for Mobile Devices */
    @media only screen and (max-width: 550px) {
        flex-direction: column;
        padding-right: var(--space-2xl);
        padding-left: var(--space-2xl);
    }
}

.header__logo {
    height: 68px;
    margin-top: 18px;
    align-self: flex-end;
    width: 118px;
    object-fit: contain;
}

.header__actions {
    margin-right: 60px;
    display: flex;
    align-items: center;

    @media only screen and (max-width:1440px) {
        margin-right: 0px;
    }

    /** Handling Menu UI for Mobile Devices */
    @media only screen and (max-width:550px) {
        flex-direction: column;
    }
}

.header__signup {
    color: var(--black_900_01) !important;
    text-transform: uppercase;

    @media only screen and (max-width:1440px) {
        font-size: 13px;
    }
}

.header__login-button {
    color: var(--white_a700_01) !important;
    margin-left: 10px;
    padding-left: var(--space-7xl);
    padding-right: var(--space-7xl);
    text-transform: uppercase;
    font-size: 16px;
    font-weight: 700;
    background-color: var(--gray_500) !important;
    height: 40px;
    min-width: 120px;
    border-radius: 20px !important;

    @media only screen and (max-width:1440px) {
        font-size: 13px;
    }

    @media only screen and (max-width:550px) {
        padding-left: var(--space-2xl);
        padding-right: var(--space-2xl);
        margin-left: 0px;
    }
}

.header__user-icon {
    height: 40px;
    margin-left: 30px;
    width: 38%;
    object-fit: contain;

    @media only screen and (max-width:550px) {
        width: 100%;
        margin-left: 0px;
    }
}

.header__main-nav {
    background-color: var(--gray_500);
    display: flex;
    justify-content: center;
}

.header__nav-row {
    margin-top: 14px;
    display: flex;

    @media only screen and (max-width: 1440px) {
        padding-right: var(--space-4xl);
        padding-left: var(--space-4xl);
    }
}

.header__nav-menu {
    gap: 24px;
    display: flex;
    align-items: flex-start;
}

.header__menu-item {
    gap: var(--space-xl);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header__menu-indicator {
    height: 2px;
    background-color: var(--white_a700_01);
    width: 42px;
}

.dhi-group {
    cursor: pointer;

    &:hover> :last-child {
        display: block;
    }
}

.header__submenu {
    gap: var(--space-xs);
    display: flex;
    align-items: center;
    cursor: pointer;
}

.header__submenu-link {
    text-transform: uppercase;

    @media only screen and (max-width: 1440px) {
        font-size: 13px;
    }
}

.header__submenu-icon {
    height: 6px;
    width: 14px;
}

.dhi-group-1 {
    position: absolute;
    top: auto;
    min-width: 200px;
    padding-top: var(--space-lg);
    z-index: 99;
    display: none;

    group-hover {
        display: block;
    }
}

.menu-container {
    background-color: var(--white_a700_01);
    box-shadow: var(--shadow-lg);
    width: 100%;
    padding: var(--space-4xl);
    border-radius: var(--radius-xs);
}

.menu-group {
    gap: var(--space-6xl);
    display: flex;
}

